Fix nav floating too low, change menu icon

--- a/css/.sass/style.sass
+++ b/css/.sass/style.sass
@@ -86,8 +86,7 @@ nav
                 background-color: $orange //no color change when hover over soc media icons
     img#menu-icon
         display: none
-        margin-right: $space* 2
-
+        margin-right: $space
 
 div#wrapper
     @include wrapper-style
@@ -233,7 +232,7 @@ $logo-size-small: $logo-size * 0.8
             position: absolute
             right: 0
             z-index: 1000
-            top: $header-height - $menu-icon-size /2 + $space/2
+            top: $header-height - $menu-icon-size /2
             display: none
             &.open
                 display: block
@@ -272,9 +271,15 @@ $logo-size-small: $logo-size * 0.8
             width: ($heading-icon-size - $space * 2) * 0.6
             padding: $space/2
 
+@mixin narrow-header
+    header    
+        @include header-dimensions($logo-size-small)
+        padding: 0
+
 @media only screen and (max-width : 650px)
     @include collapsed-nav($logo-size)
     @include smaller-imgs
+    @include narrow-header
     body
         font-size: 1em
     // h1
@@ -284,9 +289,7 @@ $logo-size-small: $logo-size * 0.8
 
 @media only screen and (max-width : 480px)
     @include collapsed-nav($logo-size-small)
-    header    
-        @include header-dimensions($logo-size-small)
-        padding: 0
+    @include narrow-header
     h1
         font-size: 2.2em
     h2, h3, h4
